# AR-SDK-Samples

./: CMakeLists.txt  LICENSE  README.md  build_samples.sh
apps/: CMakeLists.txt
apps/BodyTrackApp/: BodyTrackApp.cpp  CMakeLists.txt  README.md  bodyEngine.cpp  bodyEngine.h  run_bodytrackapp_offline.bat.in  run_bodytrackapp_offline.sh.in  run_bodytrackapp_webcam.bat.in  run_bodytrackapp_webcam.sh.in  socket_client.cpp  socket_client.h
apps/ExpressionApp/: CMakeLists.txt  ExpressionApp.cpp  README.md  directoryIterator.cpp  directoryIterator.h  expressionAppUI.cpp  expressionAppUI.h  meshRenderer.cpp  meshRenderer.h  run_expressionapp_offline.bat.in  run_expressionapp_offline.sh.in  run_expressionapp_webcam.bat.in  run_expressionapp_webcam.sh.in
apps/ExpressionApp/backendopengl/: faceIO.cpp  faceIO.h  glMaterial.cpp  glMaterial.h  glMesh.cpp  glMesh.h  glShaders.cpp  glShaders.h  glSpectrum.h  openGLMeshRenderer.cpp  openGLMeshRenderer.h  simpleFaceModel.h
apps/FaceTrackApp/: CMakeLists.txt  FaceTrackApp.cpp  README.md  faceEngine.cpp  faceEngine.h  run_facetrackapp_offline.bat.in  run_facetrackapp_offline.sh.in  run_facetrackapp_webcam.bat.in  run_facetrackapp_webcam.sh.in
apps/FaceTrackTritonClientApp/: CMakeLists.txt  FaceTrackTritonClientApp.cpp  README.md  run_facetracktritonclientapp_offline.sh.in
apps/GazeRedirectionApp/: CMakeLists.txt  GazeRedirectionApp.cpp  README.md  gazeEngine.cpp  gazeEngine.h  run_gazeredirectionapp_offline.bat.in  run_gazeredirectionapp_offline.sh.in  run_gazeredirectionapp_webcam.bat.in  run_gazeredirectionapp_webcam.sh.in
apps/GazeRedirectionTritonClientApp/: CMakeLists.txt  GazeRedirectionTritonClientApp.cpp  README.md  run_gazeredirectiontritonclientapp_offline.sh.in
apps/LipSyncApp/: CMakeLists.txt  LipSyncApp.cpp  README.md  fix_metadata.bat.in  fix_metadata.sh.in  run_lipsyncapp_offline.bat.in  run_lipsyncapp_offline.sh.in  setup_env.sh.in
apps/LipSyncTritonClientApp/: CMakeLists.txt  LipSyncTritonClientApp.cpp  README.md  run_lipsynctritonclientapp_offline.sh.in
apps/LivePortraitApp/: CMakeLists.txt  LivePortraitApp.cpp  README.md  nvCVImageNonUniformScaleOffset.cu  nvCVImageNonUniformScaleOffset.h  run_liveportrait_offline.bat.in  run_liveportrait_offline.sh.in  run_liveportrait_webcam.bat.in  run_liveportrait_webcam.sh.in
apps/SpeechLivePortraitApp/: CMakeLists.txt  README.md  SpeechLivePortraitApp.cpp  run_speechliveportrait.bat.in  run_speechliveportrait.sh.in
apps/SpeechLivePortraitTritonClientApp/: CMakeLists.txt  README.md  SpeechLivePortraitTritonClientApp.cpp  run_speechliveportraittritonclientapp_offline.sh.in
apps/VideoLivePortraitTritonClientApp/: CMakeLists.txt  README.md  VideoLivePortraitTritonClientApp.cpp  run_videoliveportraittritonclientapp_offline.sh.in
cmake/: FindARSDK.cmake  FindTensorRT.cmake  VersionCheck.cmake
docker/: Dockerfile  build_docker_image.sh  docker_config.sh
utils/: batchUtilities.cpp  batchUtilities.h  nvCVLoggerExamples.cpp  nvCVLoggerExamples.h  wave.h  waveReadWrite.cpp  waveReadWrite.h
